# api/openapi.json
@@ -1668,6 +1668,15 @@
               "null"
             ]
           },
+          "existing": {
+            "items": {
+              "$ref": "#/components/schemas/InstallPlanExisting"
+            },
+            "type": [
+              "array",
+              "null"
+            ]
+          },
           "footprint": {
             "$ref": "#/components/schemas/InstallPlanFootprint"
           },
@@ -1715,7 +1724,32 @@
           "scope_options",
           "scope_default",
           "footprint",
-          "permissions"
+          "permissions",
+          "existing"
+        ],
+        "type": "object"
+      },
+      "InstallPlanExisting": {
+        "additionalProperties": false,
+        "properties": {
+          "instance_id": {
+            "type": "string"
+          },
+          "mine": {
+            "type": "boolean"
+          },
+          "name": {
+            "type": "string"
+          },
+          "scope": {
+            "type": "string"
+          }
+        },
+        "required": [
+          "instance_id",
+          "name",
+          "scope",
+          "mine"
         ],
         "type": "object"
       },
@@ -2642,6 +2676,10 @@
       "MailProviderOption": {
         "additionalProperties": false,
         "properties": {
+          "created_at": {
+            "format": "int64",
+            "type": "integer"
+          },
           "id": {
             "type": "string"
           },
@@ -2655,7 +2693,8 @@
         "required": [
           "id",
           "label",
-          "provider_type"
+          "provider_type",
+          "created_at"
         ],
         "type": "object"
       },
